# cmake-demo

./: CMakeLists.txt  README.md  main.c
lib/Debug/: testFunc.lib
src/: main.c
testFunc/include/: testFunc.h
